@@ -1,3 +1,5 @@
+04/04/2011	Adding DecrementLifetimes patch (from Mark Smith)
+
 25/03/2011	Renaming RemoveRoute to FlushRoute (from Mark Smith)
 
 22/03/2011	Adding RemoveRoute options (from Mark Smith)
